force-app/main/default/objects/Opportunity/fields/NotarauftragVersendet__c.field-meta.xml
<CustomField>
    <fullName>NotarauftragVersendet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notarauftrag versendet</label>
    <type>Checkbox</type>
</CustomField>