force-app/main/default/objects/Opportunity/fields/NotarauftragVorhanden__c.field-meta.xml
<CustomField>
    <fullName>NotarauftragVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notarauftrag vorhanden</label>
    <type>Checkbox</type>
</CustomField>