force-app/main/default/objects/Opportunity/fields/Notartermin__c.field-meta.xml
<CustomField>
    <fullName>Notartermin__c</fullName>
    <inlineHelpText>Wichtig: Dies ist das Datum der ursprünglichen Vertragsunterzeichnung seitens des Kunden.</inlineHelpText>
    <label>Notartermin</label>
    <type>Date</type>
</CustomField>