force-app/main/default/objects/Opportunity/fields/NotarterminUhrzeit__c.field-meta.xml
<CustomField>
    <fullName>NotarterminUhrzeit__c</fullName>
    <label>Notartermin Uhrzeit</label>
    <type>Time</type>
</CustomField>