force-app/main/default/objects/Opportunity/fields/NotaryDatePossibleFrom__c.field-meta.xml
<CustomField>
    <fullName>NotaryDatePossibleFrom__c</fullName>
    <formula>FourteenDayDeadlineRunsSince__c + 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notartermin möglich ab</label>
    <type>Date</type>
</CustomField>