force-app/main/default/objects/Opportunity/fields/NotesBackoffice__c.field-meta.xml
<CustomField>
    <fullName>NotesBackoffice__c</fullName>
    <label>Notizen Backoffice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>