force-app/main/default/objects/Opportunity/fields/NotesBrokerSupervisor__c.field-meta.xml
<CustomField>
    <fullName>NotesBrokerSupervisor__c</fullName>
    <label>Notizen Maklerbetreuer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>