force-app/main/default/objects/Opportunity/fields/NotesFinancialAccounting__c.field-meta.xml
<CustomField>
    <fullName>NotesFinancialAccounting__c</fullName>
    <label>Notizen FiBu</label>
    <type>TextArea</type>
</CustomField>