force-app/main/default/objects/Opportunity/fields/NotesFinancing__c.field-meta.xml
<CustomField>
    <fullName>NotesFinancing__c</fullName>
    <label>Notizen Finanzierung</label>
    <type>TextArea</type>
</CustomField>