force-app/main/default/objects/Opportunity/fields/NotesSalesControlling__c.field-meta.xml
<CustomField>
    <fullName>NotesSalesControlling__c</fullName>
    <label>Notizen Vertriebscontrolling</label>
    <type>TextArea</type>
</CustomField>