force-app/main/default/objects/Opportunity/fields/Notizen__c.field-meta.xml
<CustomField>
    <fullName>Notizen__c</fullName>
    <label>Notizen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>