force-app/main/default/objects/Opportunity/fields/NotizenBackofficeLang__c.field-meta.xml
<CustomField>
    <fullName>NotizenBackofficeLang__c</fullName>
    <label>Notizen Backoffice lang</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>