force-app/main/default/objects/Opportunity/fields/Objektart__c.field-meta.xml
<CustomField>
    <fullName>Objektart__c</fullName>
    <formula>text( Immobilie__r.Property__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objektart</label>
    <type>Text</type>
</CustomField>