force-app/main/default/objects/Opportunity/fields/OffenerBetrag__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetrag__c</fullName>
    <formula>IF(
 Kaufpreis_bezahlt__c,
	0, 
IF(Datum_Kaufpreisf_lligkeitsschreiben__c &lt;= TODAY(), IF(ISPICKVAL(Immobilie__r.Kaufpreiszahlung__c, &apos;Endfällig&apos;) || HatVKCZahlungen__c || ISPICKVAL(Immobilie__r.Kaufpreiszahlung__c, &apos;Externes Vertriebsprojekt (Endfällig)&apos;), beurkundeter_Kaufpreis__c -  Bezahlt__c, OffenerBetragMaBV__c), 0)			
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offener Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>