force-app/main/default/objects/Opportunity/fields/OffenerBetragMaBV__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetragMaBV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offener Betrag (MaBV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>