force-app/main/default/objects/Opportunity/fields/Online_Reservierung__c.field-meta.xml
<CustomField>
    <fullName>Online_Reservierung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online Reservierung</label>
    <type>Checkbox</type>
</CustomField>