force-app/main/default/objects/Opportunity/fields/OpportunityStageDuration__c.field-meta.xml
<CustomField>
    <fullName>OpportunityStageDuration__c</fullName>
    <formula>NOW()- BLANKVALUE( LastStageChangeDate , CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Stage Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>