force-app/main/default/objects/Opportunity/fields/Overhead_Empf_nger__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Empf_nger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overhead Empfänger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Overhead Empfänger)</relationshipLabel>
    <relationshipName>Overhead</relationshipName>
    <type>Lookup</type>
</CustomField>