force-app/main/default/objects/Opportunity/fields/PaymentReminderAutomaticDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentReminderAutomaticDate__c</fullName>
    <label>Zahlungserinnerung Datum automatisch</label>
    <type>DateTime</type>
</CustomField>