force-app/main/default/objects/Opportunity/fields/Phase_Genau__c.field-meta.xml
<CustomField>
    <fullName>Phase_Genau__c</fullName>
    <formula>IF(Text(StageName) == &apos;Reserviert&apos; &amp;&amp; Phasendauer__c &gt; 17,
    &apos;1 Reserviert und Phasendauer &gt; 17&apos;,
    IF(Text(StageName) == &apos;Reserviert&apos; &amp;&amp; !ISBLANK(Notartermin__c),
        &apos;3 Reserviert mit Notartermin&apos;,
        IF((Text(StageName) == &apos;Kaufvertragsangebot abgegeben&apos; || Text(StageName) == &apos;Kaufvertragsunterlagen verschickt&apos; || Text(StageName) == &apos;KV wird fremd abgegeben&apos;) &amp;&amp; ISBLANK(Notartermin__c) &amp;&amp; Phasendauer__c &gt; 10,
            &apos;5 KVUV, KVAA, KVF o.N. und Phasendauer &gt; 10&apos;,
            IF((Text(StageName) == &apos;Kaufvertragsangebot abgegeben&apos; || Text(StageName) == &apos;Kaufvertragsunterlagen verschickt&apos; || Text(StageName) == &apos;KV wird fremd abgegeben&apos;) &amp;&amp; !ISBLANK(Notartermin__c),
                &apos;6 KVUV, KVAA, KVF mit Notartermin&apos;,
                IF(Text(StageName) == &apos;Reserviert&apos; &amp;&amp; ISBLANK(Notartermin__c),
                    &apos;2 Reserviert ohne Notartermin&apos;,
                    IF((Text(StageName) == &apos;Kaufvertragsangebot abgegeben&apos; || Text(StageName) == &apos;Kaufvertragsunterlagen verschickt&apos; || Text(StageName) == &apos;KV wird fremd abgegeben&apos;) &amp;&amp; ISBLANK(Notartermin__c),
                        &apos;4 KVUV, KVAA, KVF ohne Notartermin&apos;, 
                        &apos;&apos;
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Genau</label>
    <type>Text</type>
</CustomField>