force-app/main/default/objects/Opportunity/fields/PhaseFinanzierungsanfrage__c.field-meta.xml
<CustomField>
    <fullName>PhaseFinanzierungsanfrage__c</fullName>
    <label>Phase Finanzierungsanfrage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finanzierungsanfrage gestellt</fullName>
            </value>
            <value>
                <fullName>VSA vorhanden</fullName>
            </value>
            <value>
                <fullName>Rückfragen gestellt</fullName>
            </value>
            <value>
                <fullName>Unterlagen angefordert</fullName>
            </value>
            <value>
                <fullName>Bankantrag</fullName>
            </value>
            <value>
                <fullName>Finanzierung genehmigt</fullName>
            </value>
            <value>
                <fullName>Finanzierung verloren</fullName>
            </value>
            <value>
                <fullName>Finanzierung pausiert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>