force-app/main/default/objects/Opportunity/fields/PhaseFormel__c.field-meta.xml
<CustomField>
    <fullName>PhaseFormel__c</fullName>
    <formula>TEXT(StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Formel</label>
    <type>Text</type>
</CustomField>