force-app/main/default/objects/Opportunity/fields/Phasendauer__c.field-meta.xml
<CustomField>
    <fullName>Phasendauer__c</fullName>
    <formula>TODAY() -  Letztes_Phasenupdate_am__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phasendauer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>