force-app/main/default/objects/Opportunity/fields/PlannedCertification__c.field-meta.xml
<CustomField>
    <fullName>PlannedCertification__c</fullName>
    <label>Planned Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Month</fullName>
            </value>
            <value>
                <fullName>Next Month</fullName>
            </value>
            <value>
                <fullName>Month after next</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>