force-app/main/default/objects/Opportunity/fields/Potenzieller_Kunde__c.field-meta.xml
<CustomField>
    <fullName>Potenzieller_Kunde__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Käufer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.In_Genehmigungsprozess__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>