force-app/main/default/objects/Opportunity/fields/PriceAdjustment__c.field-meta.xml
<CustomField>
    <fullName>PriceAdjustment__c</fullName>
    <description>Exclusiv price adjustment set in Berechnungs process.</description>
    <label>Kaufpreisanpassung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>