force-app/main/default/objects/Opportunity/fields/Projektbeauftragte__c.field-meta.xml
<CustomField>
    <fullName>Projektbeauftragte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projektbeauftragte</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Projektbeauftragte)</relationshipLabel>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>