force-app/main/default/objects/Opportunity/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <label>Provision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>