force-app/main/default/objects/Opportunity/fields/Provision_Thoben__c.field-meta.xml
<CustomField>
    <fullName>Provision_Thoben__c</fullName>
    <label>Provision Finanzierung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>