force-app/main/default/objects/Opportunity/fields/Provisionsbasis__c.field-meta.xml
<CustomField>
    <fullName>Provisionsbasis__c</fullName>
    <label>Provisionsbasis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>