force-app/main/default/objects/Opportunity/fields/Provisionssumme__c.field-meta.xml
<CustomField>
    <fullName>Provisionssumme__c</fullName>
    <label>Provisionssumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>