force-app/main/default/objects/Opportunity/fields/ProvisionsverhandlungVorhanden__c.field-meta.xml
<CustomField>
    <fullName>ProvisionsverhandlungVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisionsverhandlung vorhanden</label>
    <type>Checkbox</type>
</CustomField>