force-app/main/default/objects/Opportunity/fields/ProvisionsverzichtInEuro__c.field-meta.xml
<CustomField>
    <fullName>ProvisionsverzichtInEuro__c</fullName>
    <formula>ProvisionsverzichtInProzent__c * Provisionsbasis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisionsverzicht in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>