force-app/main/default/objects/Opportunity/fields/ProvisionsvoraussetzungenErfuellt__c.field-meta.xml
<CustomField>
    <fullName>ProvisionsvoraussetzungenErfuellt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wird automatisch aus den PV-Feldern der Immobilie und den damit zusammengehörenden Feldern der Verkaufschance angehakt</description>
    <inlineHelpText>Wird automatisch aus den PV-Feldern der Immobilie und den damit zusammengehörenden Feldern der Verkaufschance angehakt</inlineHelpText>
    <label>Provisionsvoraussetzungen erfüllt</label>
    <type>Checkbox</type>
</CustomField>