force-app/main/default/objects/Opportunity/fields/ProvisionVertriebskoordination__c.field-meta.xml
<CustomField>
    <fullName>ProvisionVertriebskoordination__c</fullName>
    <label>Provision Vertriebskoordination</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>