force-app/main/default/objects/Opportunity/fields/PV1MaBVRate__c.field-meta.xml
<CustomField>
    <fullName>PV1MaBVRate__c</fullName>
    <formula>Immobilie__r.Bezahlung_nach_MaBV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV - 1. MaBV Rate</label>
    <type>Checkbox</type>
</CustomField>