force-app/main/default/objects/Opportunity/fields/PVBeratungsprotokoll__c.field-meta.xml
<CustomField>
    <fullName>PVBeratungsprotokoll__c</fullName>
    <formula>Immobilie__r.PVBeratungsprotokoll__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV - Beratungsprotokoll</label>
    <type>Checkbox</type>
</CustomField>