force-app/main/default/objects/Opportunity/fields/PVFbEkUrkundeMitFinanzierung__c.field-meta.xml
<CustomField>
    <fullName>PVFbEkUrkundeMitFinanzierung__c</fullName>
    <formula>Immobilie__r.PVFbEkUrkundeMitFinanzierung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV - FB / EK / Urkunde mit Finanzierung</label>
    <type>Checkbox</type>
</CustomField>