force-app/main/default/objects/Opportunity/fields/PVKaufpreiszahlung__c.field-meta.xml
<CustomField>
    <fullName>PVKaufpreiszahlung__c</fullName>
    <formula>Immobilie__r.Provision_nach_Kaufpreiszahlung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV - Kaufpreiszahlung</label>
    <type>Checkbox</type>
</CustomField>