force-app/main/default/objects/Opportunity/fields/PVNotarterminStattgefunden__c.field-meta.xml
<CustomField>
    <fullName>PVNotarterminStattgefunden__c</fullName>
    <formula>Immobilie__r.PVNotarterminStattgefunden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV - Notartermin stattgefunden</label>
    <type>Checkbox</type>
</CustomField>