force-app/main/default/objects/Opportunity/fields/PVOriginalKV__c.field-meta.xml
<CustomField>
    <fullName>PVOriginalKV__c</fullName>
    <formula>Immobilie__r.PVOriginalKV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV - Original KV</label>
    <type>Checkbox</type>
</CustomField>