force-app/main/default/objects/Opportunity/fields/PVRisikobelehrung__c.field-meta.xml
<CustomField>
    <fullName>PVRisikobelehrung__c</fullName>
    <formula>Immobilie__r.PVRisikobelehrung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PV - Risikobelehrung</label>
    <type>Checkbox</type>
</CustomField>