force-app/main/default/objects/Opportunity/fields/Rabatt_in__c.field-meta.xml
<CustomField>
    <fullName>Rabatt_in__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maklerrabatt in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>