force-app/main/default/objects/Opportunity/fields/Rabatt_in_Euro__c.field-meta.xml
<CustomField>
    <fullName>Rabatt_in_Euro__c</fullName>
    <formula>Rabatt_in__c/100 *  Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rabatt in Euro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>