force-app/main/default/objects/Opportunity/fields/Rabattiert__c.field-meta.xml
<CustomField>
    <fullName>Rabattiert__c</fullName>
    <formula>IF(Kaufpreis__c - beurkundeter_Kaufpreis__c &lt;= 0, 0, Kaufpreis__c - beurkundeter_Kaufpreis__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rabattiert</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>