force-app/main/default/objects/Opportunity/fields/RechnungPerMail__c.field-meta.xml
<CustomField>
    <fullName>RechnungPerMail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rechnung per Mail</label>
    <type>Checkbox</type>
</CustomField>