force-app/main/default/objects/Opportunity/fields/reserviert_bis__c.field-meta.xml
<CustomField>
    <fullName>reserviert_bis__c</fullName>
    <label>reserviert bis</label>
    <type>DateTime</type>
</CustomField>