force-app/main/default/objects/Opportunity/fields/Reservierung_l_uft_aus_in__c.field-meta.xml
<CustomField>
    <fullName>Reservierung_l_uft_aus_in__c</fullName>
    <formula>IF(
  reserviert_bis__c - NOW() &gt; 0 ,
  TEXT( FLOOR( reserviert_bis__c - NOW() ) ) &amp; &quot; Tagen &quot;
  &amp; TEXT( FLOOR( MOD( (reserviert_bis__c - NOW() ) * 24, 24 ) ) ) &amp; &quot; Stunden &quot;
  &amp; TEXT( ROUND( MOD( (reserviert_bis__c - NOW() ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; Minuten&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reservierung läuft aus in</label>
    <type>Text</type>
</CustomField>