force-app/main/default/objects/Opportunity/fields/Reservierungsschein_vorhanden__c.field-meta.xml
<CustomField>
    <fullName>Reservierungsschein_vorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservierungsschein vorhanden</label>
    <type>Checkbox</type>
</CustomField>