force-app/main/default/objects/Opportunity/fields/ReservierungsscheinVersendet__c.field-meta.xml
<CustomField>
    <fullName>ReservierungsscheinVersendet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservierungsschein versendet</label>
    <type>Checkbox</type>
</CustomField>