force-app/main/default/objects/Opportunity/fields/Restforderung__c.field-meta.xml
<CustomField>
    <fullName>Restforderung__c</fullName>
    <formula>IF(
				beurkundeter_Kaufpreis__c - AbgerechneterBetrag__c &lt; 1 &amp;&amp; beurkundeter_Kaufpreis__c - AbgerechneterBetrag__c &gt; 1,
			 0,
				beurkundeter_Kaufpreis__c - AbgerechneterBetrag__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restforderung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>