force-app/main/default/objects/Opportunity/fields/Risikobelehrung__c.field-meta.xml
<CustomField>
    <fullName>Risikobelehrung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risikobelehrung</label>
    <type>Checkbox</type>
</CustomField>