force-app/main/default/objects/Opportunity/fields/RisikobelehrungVersendet__c.field-meta.xml
<CustomField>
    <fullName>RisikobelehrungVersendet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risikobelehrung versendet</label>
    <type>Checkbox</type>
</CustomField>