force-app/main/default/objects/Opportunity/fields/SecondBuyerInformation__c.field-meta.xml
<CustomField>
    <fullName>SecondBuyerInformation__c</fullName>
    <label>Zweiter Käufer Infos</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>