force-app/main/default/objects/Opportunity/fields/SharepointLinkFinanzierungsanfrage__c.field-meta.xml
<CustomField>
    <fullName>SharepointLinkFinanzierungsanfrage__c</fullName>
    <label>Sharepoint Link Finanzierungsanfrage</label>
    <type>Url</type>
</CustomField>