force-app/main/default/objects/Opportunity/fields/SourceCreation__c.field-meta.xml
<CustomField>
    <fullName>SourceCreation__c</fullName>
    <label>Quelle Anlage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TeamProQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>