force-app/main/default/objects/Opportunity/fields/Status_Finanzierung__c.field-meta.xml
<CustomField>
    <fullName>Status_Finanzierung__c</fullName>
    <label>Status Finanzierung</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>keine Finanzierung</fullName>
            </value>
            <value>
                <fullName>in Vorbereitung</fullName>
            </value>
            <value>
                <fullName>beantragt</fullName>
            </value>
            <value>
                <fullName>Zusage liegt vor</fullName>
            </value>
            <value>
                <fullName>DV liegt vor</fullName>
            </value>
            <value>
                <fullName>Auszahlungsreif</fullName>
            </value>
            <value>
                <fullName>ausgezahlt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>