force-app/main/default/objects/Opportunity/fields/Tage_in_aktueller_Phase__c.field-meta.xml
<CustomField>
    <fullName>Tage_in_aktueller_Phase__c</fullName>
    <formula>TODAY() - DateValue (LastStageChangeDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tage in aktueller Phase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>