force-app/main/default/objects/Opportunity/fields/TageNotarterminBisBankantrag__c.field-meta.xml
<CustomField>
    <fullName>TageNotarterminBisBankantrag__c</fullName>
    <formula>IF(!IsBlank(DatumBankantragGestellt__c), DatumBankantragGestellt__c, TODAY())-IF(!IsBlank(Notartermin__c), Notartermin__c, TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tage Notartermin bis Bankantrag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>