force-app/main/default/objects/Opportunity/fields/TageSeitLetzerMahnung__c.field-meta.xml
<CustomField>
    <fullName>TageSeitLetzerMahnung__c</fullName>
    <formula>IF(ISBLANK(LetzteMahnungAm__c), null, TODAY() - IF( !IsBlank(DritteMahnungVersendetAm__c), DritteMahnungVersendetAm__c, IF(!IsBlank(ZweiteMahnungVersendetAm__c), ZweiteMahnungVersendetAm__c, LetzteMahnungAm__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tage seit letzter Mahnung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>