force-app/main/default/objects/Opportunity/fields/TageUeberfaellig__c.field-meta.xml
<CustomField>
    <fullName>TageUeberfaellig__c</fullName>
    <formula>IF( !Kaufpreis_bezahlt__c &amp;&amp; !X1_MaBV_Rate_gezahlt__c &amp;&amp; (IsWon = true || Text(StageName) = &apos;Notartermin hat stattgefunden&apos;),  IF(TODAY() - (Datum_Kaufpreisf_lligkeitsschreiben__c + Immobilie__r.ZahlungszielinTagen__c) &gt; 0, TODAY() - (Datum_Kaufpreisf_lligkeitsschreiben__c + Immobilie__r.ZahlungszielinTagen__c), 0), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tage überfällig</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>