force-app/main/default/objects/Opportunity/fields/TeamProQId__c.field-meta.xml
<CustomField>
    <fullName>TeamProQId__c</fullName>
    <externalId>true</externalId>
    <label>TeamProQ ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>