force-app/main/default/objects/Opportunity/fields/TelefonFinanzierungsberater__c.field-meta.xml
<CustomField>
    <fullName>TelefonFinanzierungsberater__c</fullName>
    <formula>Finanzierungsberater__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefon Finanzierungsberater</label>
    <type>Text</type>
</CustomField>