force-app/main/default/objects/Opportunity/fields/Termin_Angebotsabgabe__c.field-meta.xml
<CustomField>
    <fullName>Termin_Angebotsabgabe__c</fullName>
    <description>Termin, an dem das Angebot erstellt und vom Anbieter unterzeichnet wird (anschließend ist die Annahme, die dann zum Kaufvertragsschluss führt und deren Datum im Feld Notartermin einzutragen ist)</description>
    <inlineHelpText>Hier den Termin eintragen, an dem der Anbieter die Kaufunterlagen unterzeichnet und dann an den weiteren Notar zur Annahme senden lässt (Termin für den Kaufabschluss ist dann unter Notartermin einzutragen)</inlineHelpText>
    <label>Termin Angebotsabgabe</label>
    <type>Date</type>
</CustomField>