force-app/main/default/objects/Opportunity/fields/TippgeberProvisionEmpfaenger__c.field-meta.xml
<CustomField>
    <fullName>TippgeberProvisionEmpfaenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tippgeber Provision Empfänger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Verkaufschancen (Tippgeber Provision Empfänger)</relationshipLabel>
    <relationshipName>TippgeberOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>