force-app/main/default/objects/Opportunity/fields/UrkundeMitFinanzierungLiegtVor__c.field-meta.xml
<CustomField>
    <fullName>UrkundeMitFinanzierungLiegtVor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urkunde mit Finanzierung liegt vor</label>
    <type>Checkbox</type>
</CustomField>