force-app/main/default/objects/Opportunity/fields/UrkundennummerKaufvertrag__c.field-meta.xml
<CustomField>
    <fullName>UrkundennummerKaufvertrag__c</fullName>
    <label>Urkundennummer Kaufvertrag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>