force-app/main/default/objects/Opportunity/fields/UrkundennummerKaufvertragsangebot__c.field-meta.xml
<CustomField>
    <fullName>UrkundennummerKaufvertragsangebot__c</fullName>
    <label>Urkundennummer Kaufvertragsangebot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>