force-app/main/default/objects/Opportunity/fields/Verk_ufer_Beratungsprovision__c.field-meta.xml
<CustomField>
    <fullName>Verk_ufer_Beratungsprovision__c</fullName>
    <label>Verkäufer-/Beratungsprovision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Keine</fullName>
                <default>true</default>
                <label>Keine</label>
            </value>
            <value>
                <fullName>0.365</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
            <value>
                <fullName>1.0</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>