force-app/main/default/objects/Opportunity/fields/Verk_ufer_Beratungsprovision_Empf_nger__c.field-meta.xml
<CustomField>
    <fullName>Verk_ufer_Beratungsprovision_Empf_nger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verkäufer-/Beratungsprovision Empfänger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Verkäufer-/Beratungsprovision Empfänger)</relationshipLabel>
    <relationshipName>Opportunities4</relationshipName>
    <type>Lookup</type>
</CustomField>