force-app/main/default/objects/Opportunity/fields/Verk_uferangebot_abgegeben__c.field-meta.xml
<CustomField>
    <fullName>Verk_uferangebot_abgegeben__c</fullName>
    <label>KV von Angebotsnotar verschickt</label>
    <type>Date</type>
</CustomField>