force-app/main/default/objects/Opportunity/fields/Verkauf_WH__c.field-meta.xml
<CustomField>
    <fullName>Verkauf_WH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verkauf CS</label>
    <type>Checkbox</type>
</CustomField>